# node

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bins  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  release-please-config.json
.cargo/: audit.toml
.github/workflows/: audit-schedule.yml  main-red-alert.yml  pr-checks.yml  pr-triage.yml  release.yml  stale.yml
ci/: gitlawb-core-allowed-deps.txt
crates/git-remote-gitlawb/: Cargo.toml
crates/git-remote-gitlawb/src/: main.rs
crates/git-remote-gitlawb/tests/: real_git_fetch.rs
crates/gitlawb-attest/: Cargo.toml
crates/gitlawb-attest/src/: attestation.rs  cert.rs  error.rs  lib.rs  verifier.rs
crates/gitlawb-attest/tests/: canonical_vectors.rs  with_gitlawb_core.rs
crates/gitlawb-core/: Cargo.toml
crates/gitlawb-core/src/: cert.rs  cid.rs  did.rs  encrypt.rs  error.rs  http_sig.rs  identity.rs  lib.rs  sanitize.rs  ucan.rs
crates/gitlawb-node/: Cargo.toml
crates/gitlawb-node/src/: admin.rs  arweave.rs  bootstrap.rs  cert.rs  config.rs  encrypted_pin.rs  error.rs  icaptcha.rs  ipfs_pin.rs  lib.rs  main.rs  metrics.rs  operator.rs  pinata.rs  rate_limit.rs  reconciliation.rs  server.rs  state.rs  sync.rs  test_harness.rs  test_support.rs  visibility.rs  webhooks.rs
crates/gitlawb-node/src/api/: agents.rs  arweave.rs  bounties.rs  certs.rs  changelog.rs  encrypted.rs  events.rs  ipfs.rs  issues.rs  labels.rs  mod.rs  peers.rs  profiles.rs  protect.rs  pulls.rs  register.rs  repos.rs  resolve.rs  stars.rs  tasks.rs  visibility.rs  webhooks.rs
crates/gitlawb-node/src/auth/: mod.rs
crates/gitlawb-node/src/db/: mod.rs
crates/gitlawb-node/src/git/: issues.rs  mod.rs  push_delta.rs  repo_store.rs  smart_http.rs  store.rs  tigris.rs  visibility_pack.rs
crates/gitlawb-node/src/git/repo_store/: download.rs
crates/gitlawb-node/src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs  types.rs
crates/gitlawb-node/src/p2p/: mod.rs
crates/gitlawb-node/src/storage/: archive.rs  fs.rs  ipfs.rs  mod.rs  s3.rs
crates/gitlawb-node/tests/: deny_harness.rs  inv22_gates.rs
crates/gitlawb-node/tests/support/: assert.rs  mod.rs  probe.rs  routes.rs  signing.rs
crates/gl/: Cargo.toml
crates/gl/src/: agent.rs  bounty.rs  cert.rs  changelog.rs  clone.rs  doctor.rs  http.rs  identity.rs  init.rs  ipfs_cmd.rs  issue.rs  main.rs  mcp.rs  mirror.rs  name.rs  node.rs  node_stake.rs  peer.rs  pr.rs  profile.rs  protect.rs  quickstart.rs  register.rs  repo.rs  star.rs  status.rs  sync.rs  task.rs  ucan_cmd.rs  visibility.rs  webhook.rs  whoami.rs
crates/gl/tests/: no_parse_before_status.rs
crates/icaptcha-client/: Cargo.toml
docs/: ECONOMICS.md  MAINTAINER-ROADMAP.md  OSS-READINESS-AUDIT.md  RUN-A-NODE.md
infra/: README.md
infra/aws/: .gitignore  README.md  compose.yaml.tftpl  main.tf  monitoring.tf  outputs.tf  rds.tf  terraform.tfvars.example  user-data.sh.tftpl  variables.tf  versions.tf
infra/fly/: fly.toml  gitlawb-node-2.fly.toml  gitlawb-node-3.fly.toml  node.toml  node2.toml  node3.toml
npm/: README.md
scripts/: build-bins.sh  check-gitlawb-core-deps.sh
(+6 files in other folders)
